--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
         "@vitejs/plugin-vue": "^4.1.0",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vue-loader": "^17.0.1",
+        "vue-template-compiler": "^2.7.14"
     },
     "dependencies": {
         "vue": "^3.2.36",
-        "vue-loader": "^17.0.1",
         "vue-router": "^4.0.13"
     }
 }
