--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.1",
         "@vitejs/plugin-vue": "^4.1.0",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.1",
         "vite": "^4.0.0",
         "vue-loader": "^17.0.1",
         "vue-template-compiler": "^2.7.14"
     },
     "dependencies": {
+        "@mdi/js": "^7.2.96",
+        "@tailwindcss/forms": "^0.5.3",
+        "chart.js": "^4.2.1",
+        "numeral": "^2.0.6",
+        "pinia": "^2.0.35",
         "vue": "^3.2.36",
         "vue-router": "^4.0.13"
     }
