--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "chart.js": "^4.2.1",
         "numeral": "^2.0.6",
         "pinia": "^2.0.35",
+        "sweetalert": "^2.1.2",
         "vue": "^3.2.36",
         "vue-router": "^4.0.13"
     }
