--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@mdi/js": "^7.2.96",
         "@tailwindcss/forms": "^0.5.3",
         "chart.js": "^4.2.1",
+        "daisyui": "^2.51.6",
         "numeral": "^2.0.6",
         "pinia": "^2.0.35",
         "sweetalert": "^2.1.2",
