--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@mdi/js": "^7.2.96",
         "@tailwindcss/forms": "^0.5.3",
         "chart.js": "^4.2.1",
+        "compressorjs": "^1.2.1",
         "daisyui": "^2.51.6",
         "numeral": "^2.0.6",
         "ol": "^7.3.0",
