--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=AttendMe
 APP_ENV=local
 APP_KEY=base64:admya5cBwNg8xm3Dihz6J2IOy1+xdYTDWd210iTnZPI=
 APP_DEBUG=true
@@ -28,13 +28,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=attendme0@gmail.com
+MAIL_PASSWORD=egtssgytqsjfbqsc
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="attendme0@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
