--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "ol": "^7.3.0",
         "pinia": "^2.0.35",
         "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.7.3",
         "vue": "^3.2.36",
         "vue-router": "^4.0.13"
     }
