--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@mdi/js": "^7.2.96",
         "@tailwindcss/forms": "^0.5.3",
+        "@vue/compiler-sfc": "^3.3.4",
         "bcryptjs": "^2.4.3",
         "chart.js": "^4.3.0",
         "compressorjs": "^1.2.1",
